--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -12,3 +12,10 @@
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
 }
+.home-second-bg{
+       width: 100%;
+       height: 50vh;
+       background: url(../../../public/images/bg/applewatch2.jpg);
+       background-size: cover;
+       background-attachment: fixed;
+}
