--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  /* background-color: #242424; */
+ 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,10 +13,29 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 2rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body{
+  overflow-x: hidden !important;
+  background-color: #242424;
 }
 a {
   font-weight: 500;
