--- a/src/Components/HomeReadingSection/HomeReadingSection.css
+++ b/src/Components/HomeReadingSection/HomeReadingSection.css
@@ -1,9 +1,11 @@
+
 .reading-box-container{
        width: 90%;
        border-radius: 1.1rem;
        cursor: pointer;
        transition: all .5s;
        box-shadow: 0px 5px 10px 1px rgba(255, 255, 255, 0.475);
+       overflow-x: hidden;
 }
 .w90{
        width: 90% !important;
