--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -2,7 +2,7 @@
        background: #444444;
        position: sticky;
        top: 0;
-      width: 105%;
+      width: 100vw;
        z-index: 2;
 }
 .navbar-toggler{   
