--- a/src/Components/ProductsCard/ProductsCard.css
+++ b/src/Components/ProductsCard/ProductsCard.css
@@ -10,6 +10,7 @@
        box-shadow: 0px 0px 20px 1px #8a8a8a;
        transition: all .5s;
        cursor: pointer;
+       margin: 1.5rem auto !important;
 }
 .product-card:hover{
        transform: scale(1.05)translateY(-1vh);
