--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -99,6 +99,10 @@ color: #d8d6d6;
        color: #d0cdcd;
        font-size: 1.2rem;
 }
+.product-page-price{
+       color: #a5a5a5;
+       text-decoration: line-through;
+}
 .product-price{
 position: fixed;
 width: 100%;
