update searchbar actions

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -50,3 +50,19 @@ width: 70%;
               transform: scale(1)rotate(10deg);
        }
 }
+.search-result-container{
+       width: 95%;
+       height: 40vh;
+       overflow-y: auto;
+       padding: .5rem;
+       background-color: #d6d4d446;
+       top: 100%;
+       border-radius: 1rem;
+}
+.filtred-pr-title{
+       color: #000000;
+}
+.search-result:hover .filtred-pr-title{color: #fff;}
+.searchbar-filtred-product-img{
+       width: 40px;
+}
