--- a/src/Components/HomeReadingSection/HomeReadingSection.css
+++ b/src/Components/HomeReadingSection/HomeReadingSection.css
@@ -4,7 +4,7 @@
        border-radius: 1.1rem;
        cursor: pointer;
        transition: all .5s;
-       box-shadow: 0px 5px 10px 1px rgba(255, 255, 255, 0.475);
+       box-shadow: 0px 5px 5px 1px rgba(255, 255, 255, 0.114);
        overflow-x: hidden;
 }
 .w90{
@@ -12,7 +12,7 @@
 }
 .reading-box-container:hover{
        transform: translateY(-3vh);
-       box-shadow: 0px 5px 30px 1px rgb(255, 255, 255) !important;
+       box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.196) !important;
 }
 .reding-box-text-container{
        padding: 2% 2% 5% 2%;
