--- a/src/Components/ProductsCard/ProductsCard.css
+++ b/src/Components/ProductsCard/ProductsCard.css
@@ -7,14 +7,14 @@
        height: 350px;
        background-color: #fff;
        border-radius: 1rem;
-       box-shadow: 0px 0px 20px 1px #8a8a8a;
+       box-shadow: 0px 0px 10px 1px #ffffff6c;
        transition: all .5s;
        cursor: pointer;
        margin: 1.5rem auto !important;
 }
 .product-card:hover{
        transform: scale(1.05)translateY(-1vh);
-       box-shadow: 0px 0px 30px 1px #ffffff;
+       box-shadow: 0px 0px 15px 1px #ffffff6b;
 }
 .product-card-price-infos{
        bottom: 0;
