--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+@font-face {
+  font-family: yekan;
+  src: url(../public/font/Yekan.ttf);
+}
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: yekan;
   line-height: 1.5;
   font-weight: 400;
 
@@ -32,6 +36,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: yekan;
 }
 body{
   overflow-x: hidden !important;
